# PyBot

./: .gitignore  README.md  installer.iss  pyproject.toml  run.py  run.spec
.claude/: settings.local.json
.github/workflows/: build-linux.yml
src/pybot/: __init__.py  __main__.py  app.py
src/pybot/core/: enums.py  exceptions.py  hotkey_manager.py  macro_store.py  models.py  paths.py  player.py  recorder.py  settings.py
src/pybot/services/: macro_service.py  playback_service.py  preview_service.py  recording_service.py
src/pybot/ui/: main_window.py  style.py
src/pybot/ui/pages/: editor_page.py  record_page.py  settings_page.py
src/pybot/ui/widgets/: animated_stack.py  glass_card.py  preview_overlay.py  sidebar.py  state_indicator.py  title_bar.py  toast.py  tray_icon.py
src/pybot/utils/: platform.py  resources.py  serialization.py
