[project]
name = "pybot"
version = "0.1.0"
description = "Macro Recorder & Player – Create your own bot"
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.6",
    "pynput>=1.7.6",
    "qtawesome>=1.3",
]

[project.optional-dependencies]
vision = ["mss>=9.0", "Pillow>=10.0"]
dev = ["pytest", "pytest-qt", "pyinstaller", "ruff", "mypy"]

[project.gui-scripts]
pybot = "pybot.app:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
